admin/src/style/overides/_overides.scss
@import "./var";
@import "./mixins";

*{
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}
body{
    overflow-x: hidden;
    background-color: LightGray(1);
    font-family: $base_font;
    color: Primary(1);
}
ul{
    padding-left: 10px;
}
h1{
    font-size: 3rem;
}
h2{
    font-size: 1.8rem;
}
h3{
    font-size: 1.2rem;
}
h4{
    font-size: 0.9rem;
}
h1,h2,h3,h4,h5,h6,small,strong,label{
    font-family: $secondary_font;
    font-weight:400;
}

h1,h2,h3,h4,h5,h6{     
    color: Accent(1);
}
small{
    color: Secondary(0.6);
    font-size: 1rem;
}

p,a,li,tr{
    font-family: $base_font;
    font-weight: 500;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

input,textarea{
    padding: 10px;
    outline: none;
    font-family: $secondary_font;
    border: 1px solid Secondary(0.1);
    border-radius: 5px;
    background-color: Green(0.4);
}

input{
    height: 40px;
}

input:hover,textarea:hover{
    box-shadow: 0px 0px 15px 5px Green(0.1);
    border-color:  Green(0.4);
}
input:active,input:focus,input:active,input:focus{
    box-shadow: 0px 0px 15px 5px Green(0.1);
    border-color:  Green(1);
}

.error{
    color: Error(1);
    font-style:italic ;
    padding: 10px;
}

.error-btn{
    background-color: Error(1);
    color: white;
}


.input-error,.input-error:hover,.input-error:active,.input-error:focus{ 
    border-color: Error(1) !important;
}

input:disabled,.select-drop .select-drop-pre__control--is-disabled{
    color: black;
    background-color: Secondary(0.4);
    border: 1px solid Secondary(0.4) !important;
}

button { 
    background-color: Secondary(1);
    min-height: 40px;
    font-family: $secondary_font;
    padding: 10px 20px;
    font-size: $h3size;
    letter-spacing: 0.06rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}
button:hover,button:focus{
    box-shadow: 0px 0px 15px 5px black(0.1);
    background-color: Green(1);

    color: Bright(1) ;

}
button:focus{
    background-color: Accent(1);
}

input[type="checkbox"],input[type="radio"]{
    accent-color: Green(1) !important;
}

a{
    color: Blue(1);
    font-weight: 500;
    text-decoration: none;
}
a:hover{ 
    color: Secondary(1) !important;
}
a:visited{ 
    color: Secondary(1)
}

input,button,a,textarea{
    transition: all 0.25s ease-in-out;
}

.danger-text{
    color: Warning(1);
}

.Dropdown-root{
    z-index: 100;

    *{
        z-index: 100;
    }
    min-width: 200px;
    position: relative;
    cursor: pointer ;
    border: 1px solid Secondary(1);
    img{
        width: 20px;    
        margin-left: 10px;
        object-fit: cover;
    }
    .Dropdown-control{
        padding: 15px;
        background-color: Green(0.4);
        position: relative;
        display: flex ;
        justify-content: space-between;
    }
    .Dropdown-menu{
        border: 1px solid Secondary(1);

        position: absolute;
        max-height: 200px;
        overflow-y: scroll;
        background-color: Bright(1);
        width: 100%;     
        *{
            padding: 15px;
            transition: all 100ms ease;
        }
        *:hover{
            background-color:Green(1);
        }
    }
}

.react-select-container{
    min-width: 120px;
    * {
        cursor: pointer;
    }
    .react-select__control{
        border: 1.5px solid Secondary(0.6);
        z-index: 10;  
        *{
            z-index: 10;    
        }
        .react-select__multi-value{
            background-color: Secondary(0.3);
            padding: 10px;
            font-size: $h3size;
            border-radius: 10px;

            .react-select__multi-value__remove{
                transform: scale(1.3);
                margin-left: 10px;
            }
            .react-select__multi-value__remove:hover{
                color: Error(1);
                background-color: transparent;
            }
        }
        .react-select__value-container{
        }
        .react-select__indicators{

        }   
    }
    .react-select__menu{
        z-index: 100;
           *{
            z-index: 100;
           }

        .react-select__menu-list{

        }
        .react-select__option{

        }
    }
}
@include scrollify(".react-select-container .react-select__menu .react-select__menu-list");
.unitvalue{
    display: inline-flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
}
.make-img-blue{
    filter: invert(53%) sepia(75%) saturate(275%) hue-rotate(141deg) brightness(86%) contrast(90%);
}
.make-img-error{
    filter: invert(50%) sepia(83%) saturate(692%) hue-rotate(314deg) brightness(97%) contrast(85%);
}
.make-img-green{
    filter: invert(52%) sepia(37%) saturate(427%) hue-rotate(85deg) brightness(99%) contrast(94%);

}
#popup-root{
    > *  {   
        z-index: 100000 !important;
    }

    .popup-container{
        background-color: rgba($color: #000000, $alpha: 0.85);
        width: 100vw;
        height: 100vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        align-content: center;
        position: static;


        .content-container{

            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            align-content: center;
            * {
                z-index: 100001;
            }
            .react-select-container{
                z-index: 1000200;
                *  {
                    z-index: 1000200;

                }
            }
            .content{
                width: 80vw;
                margin: 0px auto;
                height: 60vh;
                overflow-y: auto;
            }
            button.closecontainer{
    
                border-radius: 0px;
                color: Bright(1);
                padding: 10px  35px;
                align-self: flex-end;
            }
        }
    
    }
}

@include scrollify(".Dropdown-menu",true);
@include scrollify("#popup-root .popup-container .content",true);

